<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="poiViewModel"
            type="com.example.pointsofinterest.screens.poi.PoiViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.poi.PoiFragment">

        <TextView
            android:id="@+id/lblPoiName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblPoiName"
            android:textSize="12pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtPoiName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="12pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblPoiName" />

        <TextView
            android:id="@+id/lblPoiType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblPoiType"
            android:textSize="12pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtPoiName" />

        <Spinner
            android:id="@+id/cboPoiType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblPoiType" />

        <TextView
            android:id="@+id/lblPoiPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblPoiPrice"
            android:textSize="12pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cboPoiType" />

        <EditText
            android:id="@+id/txtPoiPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="0.00"
            android:textSize="12pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblPoiPrice" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            android:textSize="12pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnAddPoi"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnAddPoi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnAdd"
            android:textSize="12pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnCancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
